<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    android:background="@android:color/white">

<!--TITLE-->
    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="30sp"
        android:textStyle="bold"
        android:fontFamily="monospace"
        android:textColor="@color/blue"
        android:layout_marginBottom="24dp" />
<!--USERNAME-->
    <EditText
        android:id="@+id/usernameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="text"
        android:layout_marginBottom="12dp" />
<!--PASSWORD-->
    <EditText
        android:id="@+id/passwordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginBottom="24dp" />
<!--LOGIN BUTTON-->
    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:layout_marginBottom="12dp"
        android:textSize="22sp"
        android:backgroundTint="@color/blue"/>
<!--REGISTER BUTTON-->
    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textSize="18sp"
        android:backgroundTint="@color/black"/>
</LinearLayout>